--- a/src/assets/scss/elements/box.scss
+++ b/src/assets/scss/elements/box.scss
@@ -3,10 +3,10 @@
 
   .content {
     text-transform: uppercase;
-    color: #7a7a7a;    
+    color: $gray;    
   }
 
   .level-item {
-    color: #3B4CCA;
+    color: $blue;
   }
 }
